<!--

    Sonatype Nexus (TM) Open Source Version
    Copyright (c) 2008-present Sonatype, Inc.
    All rights reserved. Includes the third-party code listed at http://links.sonatype.com/products/nexus/oss/attributions.

    This program and the accompanying materials are made available under the terms of the Eclipse Public License Version 1.0,
    which accompanies this distribution and is available at http://www.eclipse.org/legal/epl-v10.html.

    Sonatype Nexus (TM) Professional Version is available from Sonatype, Inc. "Sonatype" and "Sonatype Nexus" are trademarks
    of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
    Eclipse Foundation. All other trademarks are the property of their respective owners.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.nexus.testsuite</groupId>
    <artifactId>nexus-testsuite</artifactId>
    <version>3.77.0-08</version>
  </parent>
  
  <!-- 
  This POM has been updated for Java 21 compatibility as part of the Nexus Repository
  upgrade from Java 17 to Java 21. Key changes include:
  - Updated Maven compiler plugin configuration to use Java 21
  - Updated Groovy Eclipse compiler dependencies for Java 21 compatibility
  - Updated Maven Bundle Plugin for Java 21 compatibility
  -->

  <artifactId>nexus-repository-testsupport</artifactId>
  <name>${project.groupId}:${project.artifactId}</name>
  <packaging>bundle</packaging>

  <!-- Dependencies updated for Java 21 compatibility -->
  <dependencies>
    <!--
    Dependencies provided by the Nexus container
    -->
    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-pax-exam</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-repository-content</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-repository-services</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.plugins</groupId>
      <artifactId>nexus-blobstore-s3</artifactId>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>com.amazonaws</groupId>
          <artifactId>aws-java-sdk-s3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.amazonaws</groupId>
          <artifactId>aws-java-sdk-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.plugins</groupId>
      <artifactId>nexus-repository-maven</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.plugins</groupId>
      <artifactId>nexus-repository-raw</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.plugins</groupId>
      <artifactId>nexus-ssl-plugin</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-cleanup</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-ssl</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.testsuite</groupId>
      <artifactId>nexus-docker-testsupport</artifactId>
      <optional>true</optional>
      <scope>provided</scope>
    </dependency>

    <!--
    Dependencies that belong to this feature
    -->
    <dependency>
      <groupId>org.sonatype.goodies</groupId>
      <artifactId>goodies-testsupport</artifactId>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-testsupport</artifactId>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-test-common</artifactId>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-rest-client</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant-launcher</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpmime</artifactId>
    </dependency>

    <dependency>
      <groupId>com.github.oshi</groupId>
      <artifactId>oshi-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.maven.shared</groupId>
      <artifactId>maven-shared-utils</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.maven.shared</groupId>
      <artifactId>maven-verifier</artifactId>
    </dependency>

    <dependency>
      <groupId>org.jruby</groupId>
      <artifactId>jruby-complete</artifactId>
    </dependency>

    <dependency>
      <groupId>net.javacrumbs.json-unit</groupId>
      <artifactId>json-unit</artifactId>
    </dependency>

    <dependency>
      <groupId>org.xmlunit</groupId>
      <artifactId>xmlunit-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.redline-rpm</groupId>
      <artifactId>redline</artifactId>
    </dependency>

    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
    </dependency>

    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
    </dependency>

    <dependency>
      <groupId>org.quartz-scheduler</groupId>
      <artifactId>quartz</artifactId>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
    </dependency>

    <dependency>
      <groupId>com.adobe.testing</groupId>
      <artifactId>s3mock-testcontainers</artifactId>
    </dependency>

    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-core</artifactId>
    </dependency>

    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-s3</artifactId>
    </dependency>
  </dependencies>

  <!-- Build configuration updated for Java 21 compatibility -->
  <build>
    <plugins>
      <!-- Maven Compiler Plugin configured for Java 21 compatibility -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-eclipse-compiler</artifactId>
            <version>3.9.0</version>
          </dependency>
          <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-eclipse-batch</artifactId>
            <version>3.0.9-03</version>
          </dependency>
        </dependencies>
        <configuration>
          <!-- Explicitly set source and target to Java 21 -->
          <source>21</source>
          <target>21</target>
          <compilerId>groovy-eclipse-compiler</compilerId>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <excludePackageNames>org.sonatype.nexus.testsuite.testsupport:org.sonatype.nexus.testsuite.testsupport.*</excludePackageNames>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.karaf.tooling</groupId>
        <artifactId>karaf-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>test-feature</id>
            <goals>
              <goal>features-generate-descriptor</goal>
            </goals>
            <configuration>
              <includeProjectArtifact>true</includeProjectArtifact>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
      </plugin>
      <!-- Maven Bundle Plugin configured for Java 21 compatibility -->
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>5.1.9</version>
        <configuration>
          <instructions>
            <!-- mark Pax-Exam imports as optional; not all are needed at test-time -->
            <Import-Package>
              org.ops4j.pax.exam.*;resolution:=optional,
              org.apache.maven.*;resolution:=optional,
              com.sonatype.nexus.repository.nuget.*;resolution:=optional,
              org.sonatype.nexus.repository.apt.*;resolution:=optional,
              org.sonatype.nexus.repository.docker.*;resolution:=optional,
              org.sonatype.nexus.repository.gitlfs.*;resolution:=optional,
              org.sonatype.nexus.repository.golang.*;resolution:=optional,
              org.sonatype.nexus.repository.maven.*;resolution:=optional,
              org.sonatype.nexus.repository.rubygems.*;resolution:=optional,
              org.sonatype.nexus.repository.yum.*;resolution:=optional,
              org.sonatype.nexus.repository.search.*;resolution:=optional,
              org.sonatype.nexus.repository.storage.*;resolution:=optional,
              org.sonatype.nexus.repository.attributes.*;resolution:=optional,
              org.sonatype.nexus.repository.vulnerability.*;resolution:=optional,
              org.sonatype.nexus.testsuite.testsupport.cleanup.*;resolution:=optional,
              oshi.*;resolution:=optional,
              *
            </Import-Package>
            <Embed-Dependency>
              aws-java-sdk-s3,aws-java-sdk-core
            </Embed-Dependency>
            <Embed-Transitive>true</Embed-Transitive>
            <!-- Added for Java 21 compatibility -->
            <_noee>true</_noee>
          </instructions>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>